--- a/jest-stare/index.html
+++ b/jest-stare/index.html
@@ -89,7 +89,7 @@
                 <canvas id="test-suites-canvas" width="100" height="100"></canvas>
                 <h2>Test Suites</h2>
                 <div class="list-group">
-                    <p id="test-suites-results" class="list-group-item list-group-item-action">1 passed, 1 total</p>
+                    <p id="test-suites-results" class="list-group-item list-group-item-action">0 passed, 1 total</p>
                 </div>
             </div>
             <!-- /.col-lg-4 -->
@@ -97,7 +97,7 @@
                 <canvas id="tests-canvas" width="100" height="100"></canvas>
                 <h2>Tests</h2>
                 <div class="list-group">
-                    <p id="tests-results" class="list-group-item list-group-item-action">8 passed, 8 total</p>
+                    <p id="tests-results" class="list-group-item list-group-item-action">0 passed, 0 total</p>
                 </div>
             </div>
             <!-- /.col-lg-4 -->
@@ -126,16 +126,16 @@
 }</div>
         <div id="accordion">
             <div class="d-none" id="test-results">{
-  &quot;numFailedTestSuites&quot;: 0,
+  &quot;numFailedTestSuites&quot;: 1,
   &quot;numFailedTests&quot;: 0,
-  &quot;numPassedTestSuites&quot;: 1,
-  &quot;numPassedTests&quot;: 8,
+  &quot;numPassedTestSuites&quot;: 0,
+  &quot;numPassedTests&quot;: 0,
   &quot;numPendingTestSuites&quot;: 0,
   &quot;numPendingTests&quot;: 0,
-  &quot;numRuntimeErrorTestSuites&quot;: 0,
+  &quot;numRuntimeErrorTestSuites&quot;: 1,
   &quot;numTodoTests&quot;: 0,
   &quot;numTotalTestSuites&quot;: 1,
-  &quot;numTotalTests&quot;: 8,
+  &quot;numTotalTests&quot;: 0,
   &quot;openHandles&quot;: [],
   &quot;snapshot&quot;: {
     &quot;added&quot;: 0,
@@ -153,21 +153,22 @@
     &quot;unmatched&quot;: 0,
     &quot;updated&quot;: 0
   },
-  &quot;startTime&quot;: 1720544908059,
+  &quot;startTime&quot;: 1720553810540,
   &quot;success&quot;: false,
   &quot;testResults&quot;: [
     {
+      &quot;failureMessage&quot;: &quot;  \u001b[1m● \u001b[22mTest suite failed to run\n\n    ReferenceError: fakers is not defined\n\n    \u001b[0m \u001b[90m 83 |\u001b[39m   \u001b[36mconst\u001b[39m cadastro_conteudo_faker \u001b[33m&#x3D;\u001b[39m {\n     \u001b[90m 84 |\u001b[39m     id\u001b[33m:\u001b[39m fakerBr\u001b[33m.\u001b[39mid\u001b[33m,\u001b[39m\n    \u001b[31m\u001b[1m&gt;\u001b[22m\u001b[39m\u001b[90m 85 |\u001b[39m     titulo\u001b[33m:\u001b[39m fakers\u001b[33m.\u001b[39mtitulo\u001b[33m,\u001b[39m\n     \u001b[90m    |\u001b[39m             \u001b[31m\u001b[1m^\u001b[22m\u001b[39m\n     \u001b[90m 86 |\u001b[39m     descricao\u001b[33m:\u001b[39m fakerBr\u001b[33m.\u001b[39mdescricao\u001b[33m,\u001b[39m\n     \u001b[90m 87 |\u001b[39m     tipoConteudo\u001b[33m:\u001b[39m fakerBr\u001b[33m.\u001b[39minternet\u001b[33m.\u001b[39mtipoConteudo()\u001b[33m,\u001b[39m\n     \u001b[90m 88 |\u001b[39m     conteudo\u001b[33m:\u001b[39m fakerBr\u001b[33m.\u001b[39minternet\u001b[33m.\u001b[39mconteudo()\u001b[33m,\u001b[39m\u001b[0m\n\n      \u001b[2mat fakers (\u001b[22m\u001b[0m\u001b[36mtest&#x2F;test-users.test.js\u001b[39m\u001b[0m\u001b[2m:85:13)\u001b[22m\n      \u001b[2mat Object.describe (\u001b[22m\u001b[0m\u001b[36mtest&#x2F;test-users.test.js\u001b[39m\u001b[0m\u001b[2m:81:1)\u001b[22m\n&quot;,
       &quot;leaks&quot;: false,
       &quot;numFailingTests&quot;: 0,
-      &quot;numPassingTests&quot;: 8,
+      &quot;numPassingTests&quot;: 0,
       &quot;numPendingTests&quot;: 0,
       &quot;numTodoTests&quot;: 0,
       &quot;openHandles&quot;: [],
       &quot;perfStats&quot;: {
-        &quot;end&quot;: 1720544909556,
-        &quot;runtime&quot;: 1411,
+        &quot;end&quot;: 0,
+        &quot;runtime&quot;: 0,
         &quot;slow&quot;: false,
-        &quot;start&quot;: 1720544908145
+        &quot;start&quot;: 0
       },
       &quot;skipped&quot;: false,
       &quot;snapshot&quot;: {
@@ -179,130 +180,9 @@
         &quot;unmatched&quot;: 0,
         &quot;updated&quot;: 0
       },
+      &quot;testExecError&quot;: {},
       &quot;testFilePath&quot;: &quot;C:\\Projetos\\test-api\\test\\test-users.test.js&quot;,
-      &quot;testResults&quot;: [
-        {
-          &quot;ancestorTitles&quot;: [
-            &quot;Suite de testes da api users..&quot;
-          ],
-          &quot;duration&quot;: 110,
-          &quot;failureDetails&quot;: [],
-          &quot;failureMessages&quot;: [],
-          &quot;fullName&quot;: &quot;Suite de testes da api users.. Deve cadastrar um novo usuario .. deve retornar status 200.&quot;,
-          &quot;invocations&quot;: 1,
-          &quot;location&quot;: null,
-          &quot;numPassingAsserts&quot;: 1,
-          &quot;retryReasons&quot;: [],
-          &quot;status&quot;: &quot;passed&quot;,
-          &quot;title&quot;: &quot;Deve cadastrar um novo usuario .. deve retornar status 200.&quot;
-        },
-        {
-          &quot;ancestorTitles&quot;: [
-            &quot;Suite de testes da api users..&quot;
-          ],
-          &quot;duration&quot;: 8,
-          &quot;failureDetails&quot;: [],
-          &quot;failureMessages&quot;: [],
-          &quot;fullName&quot;: &quot;Suite de testes da api users.. Deve tentar cadastrar um novo usuario com valores invalidos .. deve retornar status 422.&quot;,
-          &quot;invocations&quot;: 1,
-          &quot;location&quot;: null,
-          &quot;numPassingAsserts&quot;: 1,
-          &quot;retryReasons&quot;: [],
-          &quot;status&quot;: &quot;passed&quot;,
-          &quot;title&quot;: &quot;Deve tentar cadastrar um novo usuario com valores invalidos .. deve retornar status 422.&quot;
-        },
-        {
-          &quot;ancestorTitles&quot;: [
-            &quot;Suite de testes da api users..&quot;
-          ],
-          &quot;duration&quot;: 3,
-          &quot;failureDetails&quot;: [],
-          &quot;failureMessages&quot;: [],
-          &quot;fullName&quot;: &quot;Suite de testes da api users.. Consulta todos usuarios.. deve retornar status 200.&quot;,
-          &quot;invocations&quot;: 1,
-          &quot;location&quot;: null,
-          &quot;numPassingAsserts&quot;: 1,
-          &quot;retryReasons&quot;: [],
-          &quot;status&quot;: &quot;passed&quot;,
-          &quot;title&quot;: &quot;Consulta todos usuarios.. deve retornar status 200.&quot;
-        },
-        {
-          &quot;ancestorTitles&quot;: [
-            &quot;Suite de testes da api users..&quot;
-          ],
-          &quot;duration&quot;: 2,
-          &quot;failureDetails&quot;: [],
-          &quot;failureMessages&quot;: [],
-          &quot;fullName&quot;: &quot;Suite de testes da api users.. Cadastro de um novo usuario com mesmo e-mail .. deve retornar status 422.&quot;,
-          &quot;invocations&quot;: 1,
-          &quot;location&quot;: null,
-          &quot;numPassingAsserts&quot;: 1,
-          &quot;retryReasons&quot;: [],
-          &quot;status&quot;: &quot;passed&quot;,
-          &quot;title&quot;: &quot;Cadastro de um novo usuario com mesmo e-mail .. deve retornar status 422.&quot;
-        },
-        {
-          &quot;ancestorTitles&quot;: [
-            &quot;Suite de testes da api users..&quot;
-          ],
-          &quot;duration&quot;: 5,
-          &quot;failureDetails&quot;: [],
-          &quot;failureMessages&quot;: [],
-          &quot;fullName&quot;: &quot;Suite de testes da api users.. Cadastro de um novo usuario existente .. deve retornar status 422.&quot;,
-          &quot;invocations&quot;: 1,
-          &quot;location&quot;: null,
-          &quot;numPassingAsserts&quot;: 1,
-          &quot;retryReasons&quot;: [],
-          &quot;status&quot;: &quot;passed&quot;,
-          &quot;title&quot;: &quot;Cadastro de um novo usuario existente .. deve retornar status 422.&quot;
-        },
-        {
-          &quot;ancestorTitles&quot;: [
-            &quot;Suite de testes da api users..&quot;
-          ],
-          &quot;duration&quot;: 10,
-          &quot;failureDetails&quot;: [],
-          &quot;failureMessages&quot;: [],
-          &quot;fullName&quot;: &quot;Suite de testes da api users.. Envia os dados vazios e deve retornar um status 422&quot;,
-          &quot;invocations&quot;: 1,
-          &quot;location&quot;: null,
-          &quot;numPassingAsserts&quot;: 1,
-          &quot;retryReasons&quot;: [],
-          &quot;status&quot;: &quot;passed&quot;,
-          &quot;title&quot;: &quot;Envia os dados vazios e deve retornar um status 422&quot;
-        },
-        {
-          &quot;ancestorTitles&quot;: [
-            &quot;Suite de testes da api users..&quot;
-          ],
-          &quot;duration&quot;: 42,
-          &quot;failureDetails&quot;: [],
-          &quot;failureMessages&quot;: [],
-          &quot;fullName&quot;: &quot;Suite de testes da api users.. Altera o Cadastro de um usuario.. deve retornar status 200.&quot;,
-          &quot;invocations&quot;: 1,
-          &quot;location&quot;: null,
-          &quot;numPassingAsserts&quot;: 1,
-          &quot;retryReasons&quot;: [],
-          &quot;status&quot;: &quot;passed&quot;,
-          &quot;title&quot;: &quot;Altera o Cadastro de um usuario.. deve retornar status 200.&quot;
-        },
-        {
-          &quot;ancestorTitles&quot;: [
-            &quot;Suite de testes da api users..&quot;
-          ],
-          &quot;duration&quot;: 2,
-          &quot;failureDetails&quot;: [],
-          &quot;failureMessages&quot;: [],
-          &quot;fullName&quot;: &quot;Suite de testes da api users.. Deleta o cadastro de um usuario.. deve retornar status 204.&quot;,
-          &quot;invocations&quot;: 1,
-          &quot;location&quot;: null,
-          &quot;numPassingAsserts&quot;: 1,
-          &quot;retryReasons&quot;: [],
-          &quot;status&quot;: &quot;passed&quot;,
-          &quot;title&quot;: &quot;Deleta o cadastro de um usuario.. deve retornar status 204.&quot;
-        }
-      ],
-      &quot;failureMessage&quot;: null
+      &quot;testResults&quot;: []
     }
   ],
   &quot;wasInterrupted&quot;: false
@@ -361,7 +241,7 @@
   ],
   &quot;rootDir&quot;: &quot;C:\\Projetos\\test-api&quot;,
   &quot;runTestsByPath&quot;: false,
-  &quot;seed&quot;: 2028499089,
+  &quot;seed&quot;: 2100568463,
   &quot;skipFilter&quot;: false,
   &quot;snapshotFormat&quot;: {
     &quot;escapeString&quot;: false,
