update tests para conteudos criar, consultar, alterar e deletar

--- a/jest-stare/index.html
+++ b/jest-stare/index.html
@@ -153,7 +153,7 @@
     &quot;unmatched&quot;: 0,
     &quot;updated&quot;: 0
   },
-  &quot;startTime&quot;: 1720553810540,
+  &quot;startTime&quot;: 1720553866865,
   &quot;success&quot;: false,
   &quot;testResults&quot;: [
     {
@@ -241,7 +241,7 @@
   ],
   &quot;rootDir&quot;: &quot;C:\\Projetos\\test-api&quot;,
   &quot;runTestsByPath&quot;: false,
-  &quot;seed&quot;: 2100568463,
+  &quot;seed&quot;: -1080211540,
   &quot;skipFilter&quot;: false,
   &quot;snapshotFormat&quot;: {
     &quot;escapeString&quot;: false,
