--- a/jest-stare/index.html
+++ b/jest-stare/index.html
@@ -97,7 +97,7 @@
                 <canvas id="tests-canvas" width="100" height="100"></canvas>
                 <h2>Tests</h2>
                 <div class="list-group">
-                    <p id="tests-results" class="list-group-item list-group-item-action">4 passed, 4 total</p>
+                    <p id="tests-results" class="list-group-item list-group-item-action">1 passed, 4 total</p>
                 </div>
             </div>
             <!-- /.col-lg-4 -->
@@ -129,9 +129,9 @@
   &quot;numFailedTestSuites&quot;: 0,
   &quot;numFailedTests&quot;: 0,
   &quot;numPassedTestSuites&quot;: 1,
-  &quot;numPassedTests&quot;: 4,
+  &quot;numPassedTests&quot;: 1,
   &quot;numPendingTestSuites&quot;: 0,
-  &quot;numPendingTests&quot;: 0,
+  &quot;numPendingTests&quot;: 3,
   &quot;numRuntimeErrorTestSuites&quot;: 0,
   &quot;numTodoTests&quot;: 0,
   &quot;numTotalTestSuites&quot;: 1,
@@ -153,21 +153,21 @@
     &quot;unmatched&quot;: 0,
     &quot;updated&quot;: 0
   },
-  &quot;startTime&quot;: 1720785137781,
+  &quot;startTime&quot;: 1720786536366,
   &quot;success&quot;: false,
   &quot;testResults&quot;: [
     {
       &quot;leaks&quot;: false,
       &quot;numFailingTests&quot;: 0,
-      &quot;numPassingTests&quot;: 4,
-      &quot;numPendingTests&quot;: 0,
+      &quot;numPassingTests&quot;: 1,
+      &quot;numPendingTests&quot;: 3,
       &quot;numTodoTests&quot;: 0,
       &quot;openHandles&quot;: [],
       &quot;perfStats&quot;: {
-        &quot;end&quot;: 1720785139082,
-        &quot;runtime&quot;: 1143,
+        &quot;end&quot;: 1720786537340,
+        &quot;runtime&quot;: 888,
         &quot;slow&quot;: false,
-        &quot;start&quot;: 1720785137939
+        &quot;start&quot;: 1720786536452
       },
       &quot;skipped&quot;: false,
       &quot;snapshot&quot;: {
@@ -185,13 +185,13 @@
           &quot;ancestorTitles&quot;: [
             &quot;Suite de testes da api conteudos..&quot;
           ],
-          &quot;duration&quot;: 165,
+          &quot;duration&quot;: 139,
           &quot;failureDetails&quot;: [],
           &quot;failureMessages&quot;: [],
           &quot;fullName&quot;: &quot;Suite de testes da api conteudos.. Cadastrar um novo conteúdo e verificar que o conteúdo está devidamente retornando os dados esperados e o statusCode 201.&quot;,
           &quot;invocations&quot;: 1,
           &quot;location&quot;: null,
-          &quot;numPassingAsserts&quot;: 1,
+          &quot;numPassingAsserts&quot;: 3,
           &quot;retryReasons&quot;: [],
           &quot;status&quot;: &quot;passed&quot;,
           &quot;title&quot;: &quot;Cadastrar um novo conteúdo e verificar que o conteúdo está devidamente retornando os dados esperados e o statusCode 201.&quot;
@@ -200,45 +200,45 @@
           &quot;ancestorTitles&quot;: [
             &quot;Suite de testes da api conteudos..&quot;
           ],
-          &quot;duration&quot;: 10,
+          &quot;duration&quot;: null,
           &quot;failureDetails&quot;: [],
           &quot;failureMessages&quot;: [],
           &quot;fullName&quot;: &quot;Suite de testes da api conteudos.. Realizar a consulta do conteúdo em que acabou de cadastrar, retornando os dados esperados e o statusCode 200.&quot;,
           &quot;invocations&quot;: 1,
           &quot;location&quot;: null,
-          &quot;numPassingAsserts&quot;: 1,
+          &quot;numPassingAsserts&quot;: 0,
           &quot;retryReasons&quot;: [],
-          &quot;status&quot;: &quot;passed&quot;,
+          &quot;status&quot;: &quot;pending&quot;,
           &quot;title&quot;: &quot;Realizar a consulta do conteúdo em que acabou de cadastrar, retornando os dados esperados e o statusCode 200.&quot;
         },
         {
           &quot;ancestorTitles&quot;: [
             &quot;Suite de testes da api conteudos..&quot;
           ],
-          &quot;duration&quot;: 13,
+          &quot;duration&quot;: null,
           &quot;failureDetails&quot;: [],
           &quot;failureMessages&quot;: [],
           &quot;fullName&quot;: &quot;Suite de testes da api conteudos.. Você deverá alterar o conteúdo consultado anteriormente, e em seguida validar se realmente os dados foram alterados e o statusCode 201.&quot;,
           &quot;invocations&quot;: 1,
           &quot;location&quot;: null,
-          &quot;numPassingAsserts&quot;: 1,
+          &quot;numPassingAsserts&quot;: 0,
           &quot;retryReasons&quot;: [],
-          &quot;status&quot;: &quot;passed&quot;,
+          &quot;status&quot;: &quot;pending&quot;,
           &quot;title&quot;: &quot;Você deverá alterar o conteúdo consultado anteriormente, e em seguida validar se realmente os dados foram alterados e o statusCode 201.&quot;
         },
         {
           &quot;ancestorTitles&quot;: [
             &quot;Suite de testes da api conteudos..&quot;
           ],
-          &quot;duration&quot;: 8,
+          &quot;duration&quot;: null,
           &quot;failureDetails&quot;: [],
           &quot;failureMessages&quot;: [],
           &quot;fullName&quot;: &quot;Suite de testes da api conteudos.. Remover o conteúdo e garantir que o mesmo foi removido, não existe mais para consulta e o statusCode 200.&quot;,
           &quot;invocations&quot;: 1,
           &quot;location&quot;: null,
-          &quot;numPassingAsserts&quot;: 1,
+          &quot;numPassingAsserts&quot;: 0,
           &quot;retryReasons&quot;: [],
-          &quot;status&quot;: &quot;passed&quot;,
+          &quot;status&quot;: &quot;pending&quot;,
           &quot;title&quot;: &quot;Remover o conteúdo e garantir que o mesmo foi removido, não existe mais para consulta e o statusCode 200.&quot;
         }
       ],
@@ -301,7 +301,7 @@
   ],
   &quot;rootDir&quot;: &quot;C:\\Projetos\\test-api&quot;,
   &quot;runTestsByPath&quot;: false,
-  &quot;seed&quot;: 884858360,
+  &quot;seed&quot;: -645360902,
   &quot;skipFilter&quot;: false,
   &quot;snapshotFormat&quot;: {
     &quot;escapeString&quot;: false,
